Ajout d'un début de formulaire pour créer une quête avec Nom de la quête, texte début & fin avec leur couleur de base

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar id="toolbar" color="primary">
   <img src="assets/img/logo.svg" alt="Logo" class="logo">
   <span>Quest Builder</span>
 </mat-toolbar>
