--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,24 +1,27 @@
-.example-container {
+.container {
     width: 100vw;
-    height: 89vh;
+    height: calc(100vh - 65px);
     padding: 0;
     margin: 0;
+
+    display: flex;
 }
 
 .main-content {
     background-color: whitesmoke;
 
     width: 100%;
-    height: 100%;
-
-    padding: 15px;
+    height: calc(100vh - 65px);
+    
     margin: 0;
 }
 
 .drawer {
     padding: 15px;
-    width: 250px;
-
+    width: 275px;
+    height: calc(100vh - 65px);
+    box-sizing: border-box;
+    border-right: 1px solid gainsboro;
 }
 
 .auth-message {
@@ -33,3 +36,25 @@
 .auth-message button {
     margin: 20px;
 }   
+
+#quest-info {
+    margin: 20px;
+    padding: 10px 20px;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.color {
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    margin-right: 5px;
+
+    border: 1px solid darkslategray;
+    border-radius: 2px;
+}
+
+mat-form-field.mat-form-field {
+    font-size: 14px;
+}
