--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -18,51 +18,28 @@
       </mat-form-field>
 
       <!-- Texte du début -->
-      <mat-form-field [floatLabel]=" 'always' " appearance="outline">
-        <mat-label>Couleur de base (début)</mat-label>
-        <mat-select>
-          <mat-option *ngFor="let color of colors; let i = index" [value]="color.code"><div [style.background]="color.code" class="color"></div><span>{{ color.name }}</span></mat-option>
-        </mat-select>
-      </mat-form-field>
       <span class="info-debut">
-
         <mat-form-field [floatLabel]=" 'always' " appearance="outline">
           <mat-label>Texte de début</mat-label>
           <textarea matInput
+            (input)="setApercuDebut()"
+            #texteDebut
             cdkTextareaAutosize
-            #autosize="cdkTextareaAutosize"
-            cdkAutosizeMinRows="4"
+            cdkAutosizeMinRows="5"
             cdkAutosizeMaxRows="5"></textarea>
         </mat-form-field> 
 
-        <mat-form-field [floatLabel]=" 'always' " appearance="outline">
-          <mat-label>Aperçu</mat-label>
-          <textarea matInput
-            disabled
-            cdkTextareaAutosize
-            #autosize="cdkTextareaAutosize"
-            cdkAutosizeMinRows="4"
-            cdkAutosizeMaxRows="5"></textarea>
-        </mat-form-field> 
-
+        <div #apercuDebut [innerHTML]="htmlDebut" id="apercu-debut"></div>
       </span>
       
      
       <!-- Texte de fin -->
-      <mat-form-field [floatLabel]=" 'always' " appearance="outline">
-        <mat-label>Couleur de base (fin)</mat-label>
-        <mat-select>
-          <mat-option *ngFor="let color of colors" value="primary"><div [style.background]="color.code" class="color"></div><span>{{ color.name }}</span></mat-option>
-        </mat-select>
-      </mat-form-field>
       <span class="info-debut">
-      
         <mat-form-field [floatLabel]=" 'always' " appearance="outline">
           <mat-label>Texte de fin</mat-label>
           <textarea matInput
             cdkTextareaAutosize
-            #autosize="cdkTextareaAutosize"
-            cdkAutosizeMinRows="4"
+            cdkAutosizeMinRows="5"
             cdkAutosizeMaxRows="5"></textarea>  
         </mat-form-field> 
       
@@ -74,10 +51,8 @@
             #autosize="cdkTextareaAutosize"
             cdkAutosizeMinRows="4"
             cdkAutosizeMaxRows="5"></textarea>
-        </mat-form-field> 
-
+        </mat-form-field>
       </span>
-      
       
     </mat-card>
 
