Quelques modifs graphiques + ajout des aperçus des textes area

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar id="toolbar" color="primary">
+<mat-toolbar id="toolbar" color="warn">
   <img src="assets/img/logo.svg" alt="Logo" class="logo">
   <span>Quest Builder</span>
 </mat-toolbar>
