--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -55,25 +55,32 @@
     border-radius: 2px;
 }
 
-.info-debut {
+.info {
     display: flex;
     justify-content: space-between;
 }
 
-.info-debut > * {
+.info > * {
     width: 49.5%;
 }
 
-#apercu-debut {
+.apercu {
     margin: 5px 5px 20px 10px;
-    word-break: break-all;
+    padding: 10px;
+    box-sizing: border-box;
 
-    height: 110px;
-    font-size: 14px;
+    word-break: break-word;
+    word-wrap: break-word;
+
+    height: 130px;
+    font-size: 16px;
+
+    border: 1px solid gainsboro;
+    border-radius: 4px;
 
     overflow-y: auto;
 }
 
 mat-form-field.mat-form-field {
-    font-size: 14px;
+    font-size: 16px;
 }
