--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -14,6 +14,9 @@
     height: calc(100vh - 65px);
     
     margin: 0;
+
+    display: flex;
+    flex-direction: column;
 }
 
 .drawer {
@@ -83,4 +86,11 @@
 
 mat-form-field.mat-form-field {
     font-size: 16px;
+}
+
+#save-btn {
+    margin: 5px 20px;
+    padding: 10px;
+
+    background-color: #2c3e50 !important;
 }
