--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -11,14 +11,24 @@
   
   <div class="main-content">
     
-    <mat-card id="quest-info">
-
-      <mat-form-field>
-        <input matInput [value]="questName" placeholder="Nom de la quête">
-      </mat-form-field>
+    <!-- Carte infos de la quête -->
+    <mat-card class="card" id="quest-info">
+      <h2 class="card-title">Informations de la quête</h2>
+      
+      <div class="column">
+        <!-- Nom de la quête -->
+        <mat-form-field>
+          <input matInput #questNameElem [value]="questName" placeholder="Nom de la quête">
+        </mat-form-field>
+   
+        <!-- Point de départ de la quête -->
+        <mat-form-field>
+          <input matInput #startingPointElem [value]="startingPoint" placeholder="Point de départ">
+        </mat-form-field>
+      </div>
 
       <!-- Start text -->
-      <span class="info">
+      <span class="column">
         <mat-form-field [floatLabel]=" 'always' " appearance="outline">
           <mat-label>Texte de début</mat-label>
           <textarea matInput
@@ -34,7 +44,7 @@
       
      
       <!-- End text -->
-      <span class="info">
+      <span class="column">
         <mat-form-field [floatLabel]=" 'always' " appearance="outline">
           <mat-label>Texte de fin</mat-label>
           <textarea matInput
@@ -47,10 +57,23 @@
       
         <div #apercuFin class="apercu color-0" [innerHTML]="htmlEnd | safeHtml"></div>
       </span>
-      
     </mat-card>
 
-    <button id="save-btn" color="primary" mat-raised-button>Enregistrer</button>
+    <!-- Carte conditions de la quête -->
+    <mat-card class="card" id="quest-info">
+      <h2 class="card-title">Conditions</h2>
+    </mat-card>
 
+    <!-- Carte récompense de la quête -->
+    <mat-card class="card" id="quest-info">
+        <h2 class="card-title">Récompenses</h2>
+      </mat-card>
+
+    <!-- Block boutons -->
+    <div id="btn-block">
+      <button id="new-step-btn" class="custom-btn" color="primary" mat-raised-button>Nouvelle étape</button>
+      <button id="save-btn" class="custom-btn" color="primary" (click)="saveQuest()" mat-raised-button>Enregistrer</button>  
+    </div>
+    
   </div>
 </div>
