--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,7 +12,7 @@
   <div class="main-content">
     
     <!-- Carte infos de la quête -->
-    <mat-card class="card" id="quest-info">
+    <mat-card class="card">
       <h2 class="card-title">Informations de la quête</h2>
       
       <div class="column">
@@ -60,12 +60,12 @@
     </mat-card>
 
     <!-- Carte conditions de la quête -->
-    <mat-card class="card" id="quest-info">
+    <mat-card class="card">
       <h2 class="card-title">Conditions</h2>
     </mat-card>
 
     <!-- Carte récompense de la quête -->
-    <mat-card class="card" id="quest-info">
+    <mat-card class="card">
         <h2 class="card-title">Récompenses</h2>
       </mat-card>
 
